--- a/app/src/main/res/layout/challenge_item.xml
+++ b/app/src/main/res/layout/challenge_item.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="challenge"
             type="com.example.challengetimer.database.Challenge" />
+
         <variable
             name="clickListener"
             type="com.example.challengetimer.main.ChallengeListener" />
@@ -16,12 +18,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
-        android:onClick="@{() -> clickListener.onClick(challenge)}" >
-
+        android:onClick="@{() -> clickListener.onClick(challenge)}">
+        
         <me.tankery.lib.circularseekbar.CircularSeekBar
             android:id="@+id/progressSeekBar"
-            progressColor="@{challenge}"
             maxAndProgress="@{challenge}"
+            progressColor="@{challenge}"
             android:layout_width="84dp"
             android:layout_height="84dp"
             android:layout_marginHorizontal="24dp"
@@ -31,8 +33,8 @@
             app:cs_circle_stroke_width="5dp"
             app:cs_disable_pointer="true"
             app:cs_disable_progress_glow="true"
-            app:cs_hide_progress_when_empty = "true"
-            app:cs_maintain_equal_circle = "true"
+            app:cs_hide_progress_when_empty="true"
+            app:cs_maintain_equal_circle="true"
             app:cs_pointer_halo_width="0dp"
             app:cs_pointer_stroke_width="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -43,7 +45,6 @@
         <ImageView
             android:id="@+id/rank_image"
             challengeImage="@{challenge}"
-            challengeBackground="@{challenge}"
             android:layout_width="48dp"
             android:layout_height="48dp"
             app:layout_constraintBottom_toBottomOf="@+id/progressSeekBar"
@@ -57,10 +58,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:textAlignment="center"
-            android:text="@{challenge.name}"
             android:ellipsize="end"
             android:maxLines="1"
+            android:text="@{challenge.name}"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="@+id/progressSeekBar"
             app:layout_constraintStart_toStartOf="@+id/progressSeekBar"
             app:layout_constraintTop_toBottomOf="@id/progressSeekBar"
